<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/new_game"
        android:icon="@drawable/ic_new_game"
        android:title="@string/new_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/ai_difficulty"
        android:icon="@drawable/ic_difficulty"
        android:title="@string/difficulty"
        app:showAsAction="never" />

    <item
        android:id="@+id/quit"
        android:icon="@drawable/ic_quit"
        android:title="@string/quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
